assets/css/style.css
.bg-img { 
    background-image: url("../images/cocktail.jpg");
    background-size: cover;
    background-position: center;
    height: 600px;
    background-attachment: fixed;
}

/* Dropdown 1 Begin */

#dropdowncont {
display: flex;
align-items: flex-start;
justify-content: flex-start;
}

#dropdown1{
flex: 50% 0 0;
display: flex;
justify-content: center;
}
#dropdown2{
  flex: 50% 0 0;
  display: flex;
  justify-content: center;
  }

.buttons {
  display: flex;
  flex-direction: column;
  align-self: flex-end;
  margin-top: 5rem;
}


.dropdown-check-list {
    display: inline-block;
    border-radius: 15px;
    background-color: bisque;
    margin-top: 25px;
    margin-left: 5px;
    margin-right: 5px;
  }
  
  .dropdown-check-list .anchor {
    position: relative;
    cursor: pointer;
    display: inline-block;
    padding: 15px 150px 15px 110px;
  }
  
  .dropdown-check-list .anchor:after {
    position: absolute;
    content: "";
    border-left: 2px solid black;
    border-top: 2px solid black;
    padding: 5px;
    right: 10px;
    top: 20%;
    -moz-transform: rotate(-135deg);
    -ms-transform: rotate(-135deg);
    -o-transform: rotate(-135deg);
    -webkit-transform: rotate(-135deg);
    transform: rotate(-135deg);
  }
  
  .dropdown-check-list .anchor:active:after {
    right: 8px;
    top: 21%;
  }
  
  .dropdown-check-list ul.items {
    padding: 2px;
    display: none;
    margin: 0;
    border-top: none;
  }
  
  .dropdown-check-list ul.items li {
    list-style: none;
  }
  
  .dropdown-check-list.visible .anchor {
    color: black;
  }

  .dropdown-check-list.visible .ul1 {
    display: block;
  }
  .dropdown-check-list.visible .anchor2 {
    color: black;
  }

  .dropdown-check-list.visible .ul2 {
    display: block;
  }
  

  /* Dropdown 1 End */

  /* Dropdown #2 */
  
  .dropdown-check-list {
    display: inline-block;
    border-radius: 15px;
    background-color: bisque;
    margin-top: 25px;
    margin-left: 5px;
    margin-right: 5px;
  }
  
  .dropdown-check-list .anchor2 {
    position: relative;
    cursor: pointer;
    display: inline-block;
    padding: 15px 150px 15px 110px;
  }
  
  .dropdown-check-list .anchor2:after {
    position: absolute;
    content: "";
    border-left: 2px solid black;
    border-top: 2px solid black;
    padding: 5px;
    right: 10px;
    top: 20%;
    -moz-transform: rotate(-135deg);
    -ms-transform: rotate(-135deg);
    -o-transform: rotate(-135deg);
    -webkit-transform: rotate(-135deg);
    transform: rotate(-135deg);
  }
  
  .dropdown-check-list .anchor2:active:after {
    right: 8px;
    top: 21%;
  }
  
  .dropdown-check-list ul.items {
    padding: 2px;
    display: none;
    margin: 0;
    border-top: none;
  }
  
  .dropdown-check-list ul.items li {
    list-style: none;
  }
  
  

  /* Drodown 2 End */

  /* Recipe Page Begin */


  .recipe-container {
    display: flex;
    flex-wrap: wrap;
    padding-top: 3rem;
    justify-content: center;
  }

  .drink-image {
    height: 128px;
    width: 128px
  }

  .image-container {
    flex: 33% 0 0;
    display: flex;
    justify-content: flex-end;
    align-items: center;
    margin-right: 1rem;
  }

  .drink-of-choice {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    color: white;
    font-weight: bold;
    flex: 60% 0 0;
  }

 .drink-title {
  font-size: 3rem;
  padding-left: 1rem;
  text-decoration: underline;
 }



  .drink-content {
    color: white;
    font-size: 24px;
    font-weight: bold;
    /* background: rgba(24,24,27,0.6); */
    /* border-radius: 10px; */
    padding-left: 1rem;
    /* border: 1px solid white; */
    text-shadow:
        0.03em 0 black,
        0 0.03em black,
        -0.03em 0 black,
        0 -0.03em black;
  }

  .class-instructions {
    display: flex;
    align-items: flex-start;
    flex-direction: column;
  }

  .instructions {
   flex: 60%;
   color: white;
   display: flex;
    align-items: flex-start;
    flex-direction: column;
    margin: auto;
    padding-left: 1rem;
    padding-top: 2rem;
  }

  .mixing-directions {
    display: flex;
    text-align: left;
    font-size: 2rem;
    text-decoration: underline;
    
  }

  .spacing {
    flex: 33%;
  }

  .mixing-instructions {
    padding-top: 1rem;
    font-size: 1rem;
    font-weight: bold;
    color: white;
    font-size: 20px;
    text-shadow:
        0.03em 0 black,
        0 0.03em black,
        -0.03em 0 black,
        0 -0.03em black;
  }

 

